public_subnets.tf
resource "aws_subnet" "public1" {
  vpc_id     = aws_vpc.test.id
  cidr_block = "10.0.1.0/24"
  availability_zone = "us-west-1a"
  map_public_ip_on_launch = true 

  tags = {
    Name = "Public1"
  }
}

resource "aws_subnet" "public2" {
  vpc_id     = aws_vpc.test.id
  cidr_block = "10.0.0.0/24"
  availability_zone = "us-west-1b"
  map_public_ip_on_launch = true 

  tags = {
    Name = "Public2"
  }
}
